adjust bash script paths

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -179,8 +179,8 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, W, exec, rofi -show drun -show-icons
 
 # Volume control
-bind = $mainMod ctrl, 1, exec, kitty /home/justin/Projects/Programs/bash/voldown.sh
-bind = $mainMod ctrl, 2, exec, kitty /home/justin/Projects/Programs/bash/volup.sh
+bind = $mainMod ctrl, 1, exec, kitty /home/usr/.config/hypr/bash/voldown.sh
+bind = $mainMod ctrl, 2, exec, kitty /home/usr/.config/hypr/bash/volup.sh
 
 # Start newsboat
 bind = $mainMod, F, exec, kitty /home/justin/Projects/Programs/bash/news.sh
