make png name generic

--- a/hyprpaper.conf
+++ b/hyprpaper.conf
@@ -1,3 +1,5 @@
 Refer to the wiki for more information.
-preload = ~/Media/Wallpapers/rome.jpg
-wallpaper = ,~/Media/Wallpapers/rome.jpg
+Change wallpaper path to what you want
+
+preload = ~/Media/Wallpapers/img.jpg
+wallpaper = ,~/Media/Wallpapers/img.jpg
