--- a/hyprland.conf
+++ b/hyprland.conf
@@ -23,7 +23,7 @@ monitor=,highres,auto,1
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty
+$terminal = st
 $fileManager = ranger
 $menu = wofi --show drun
 
@@ -59,7 +59,7 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 10
 
     border_size = 1
 
@@ -179,16 +179,16 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, W, exec, rofi -show drun -show-icons
 
 # Volume control
-bind = $mainMod ctrl, 1, exec, kitty /home/usr/.config/hypr/bash/voldown.sh
-bind = $mainMod ctrl, 2, exec, kitty /home/usr/.config/hypr/bash/volup.sh
+bind = $mainMod ctrl, 1, exec, st /home/justin/.config/hypr/bash/voldown.sh
+bind = $mainMod ctrl, 2, exec, st /home/justin/.config/hypr/bash/volup.sh
 
 # Start newsboat
-bind = $mainMod, F, exec, kitty /home/justin/Projects/Programs/bash/news.sh
+bind = $mainMod, F, exec, st /home/justin/Projects/Programs/bash/news.sh
 
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, kitty $fileManager
+bind = $mainMod, E, exec, st $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
@@ -245,10 +245,10 @@ bindm = $mainMod, mouse:273, resizewindow
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
 # Example windowrule v1
-# windowrule = float, ^(kitty)$
+# windowrule = float, ^(st)$
 
 # Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+# windowrulev2 = float,class:^(st)$,title:^(st)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
